реализация кеширования ленты друзей
